--- a/core/templates/sidebar.html
+++ b/core/templates/sidebar.html
@@ -1,10 +1,10 @@
 <div 
     class=" bg-slate-200 border-r-4  border-blue-400 h-screen p-4 flex flex-col space-y-2" >
         <p class="border-b-gray-400 border-2 hover:bg-slate-300 rounded-md p-1 ">
-            <a href="{% url 'user-dashboard' %}" title='User Dashboard'>Profile</a>
+            <a href="{% url 'user-profile' %}" title='User Dashboard'>Profile</a>
         </p>
         <p class="border-b-gray-400 border-2 hover:bg-slate-300 rounded-md p-1 ">
-            <a href="{% url 'user-dashboard' %}" title='User Dashboard'>Dashboard</a>
+            <a href="{% url 'dashboard' %}" title='User Dashboard'>Dashboard</a>
         </p>
         <p class="border-b-gray-400 border-2 hover:bg-slate-300 rounded-md p-1 ">
             <a href="{% url 'user-dashboard' %}" title='User Dashboard'>Your Events</a>
