--- a/users/templates/admin/category_list.html
+++ b/users/templates/admin/category_list.html
@@ -1,28 +1,46 @@
 {% extends "base.html" %}
 {% block content %}
     <h2 class="text-4xl font-bold mb-4 text-center">Categories and Related Events</h2>
+    <h3 class="text-2xl font-bold mb-2 text-center">Category Count : </h3>
+    <div class="w-3/4 mx-auto flex justify-end mb-2 ">
+        <a href="{% url 'create-category' %}"
+            class="px-2 py-2 border-2 border-gray-400 rounded-md bg-cyan-400">
+            Create Category
+        </a>
+    </div>
     <div class="w-3/4 mx-auto p-4 bg-sky-50 shadow-xl rounded-md">
         {% for category in categories %}
-            <div class="grid grid-cols-12 gap-4 border-gray-400 my-8 shadow-md p-4">
+            <div class="grid grid-cols-12 gap-4 border border-gray-400 rounded-md my-8 shadow-md p-4">
 
                 <div class="col-span-4 bg-violet-300 rounded-md">
                     <img src="" alt="Image Here">
                 </div>
                 <div class="col-span-8 border-l-2 border-black p-4">
                     <div class='grid grid-cols-2'>
-        
-                        <p><b class="text-lg">{{category.name}}</b></p>
-                        <form action="{% url 'delete-category' category.id %}" method="POST">
-                            {% csrf_token %}
-                            <button 
-                                type="submit" 
-                                class="px-2 py-2 bg-red-300 border rounded-md ">
-                                Delete
-                            </button>
-                        </form>
+                        <div>
+                            <p><b class="text-lg">{{category.name}}</b></p>
+                            <div><p>
+                                {% comment %} {{category.description}} {% endcomment %}
+                            </p></div>
+                        </div>
+                        
+                        <div class="flex space-x-4">
+                            <a href="{% url 'update-category' category.id %}"
+                                class="px-2 py-1 flex items-center border rounded-md bg-cyan-300">
+                                Update Category
+                            </a>
+                            <form action="{% url 'delete-category' category.id %}" method="POST">
+                                {% csrf_token %}
+                                <button 
+                                    type="submit" 
+                                    class="px-2 py-2 bg-red-300 border rounded-md ">
+                                    Delete
+                                </button>
+                            </form>
+                        </div>
                     </div>
-                    <div class="bg-white rounded-md pl-4 my-2">
-
+                    <div class="bg-white rounded-md pl-4 p-2 my-2">
+                        {% comment %} Events List , belonging to this Category {% endcomment %}
                         <ul>
                             <p class="font-semibold">Events: </p>
                             {% for event in category.event_list.all %}
