--- a/users/templates/registration/create_participant.html
+++ b/users/templates/registration/create_participant.html
@@ -1,23 +1,36 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1 class="text-3xl text-center font-semibold">Enroll a participant</h1>
-    <div class="text-center w=1/2 mx-auto my-10 border-3 border-black">
+    <h1 class="text-3xl text-center font-semibold">{{form_title}}</h1>
+    <div class="w-1/3 mx-auto my-10 border-2 border-black p-8 rounded-md">
         {% if messages %}
             {% for message in messages %}
-                <p>{{message}}</p>
+                <p class="px-2 py-1 border-2 bg-red-300 rounded-sm my-2">
+                    {{message}}
+                </p>
             {% endfor %}
         {% endif %}
-        <div class="w-1/2 mx-auto border-3 border-black">
+        <div class="">
 
             <form action="" method="POST" >
                 {% csrf_token %}
                 {% for field in participant_form %}
-                    <div class=" border border-black m-2 p-2">
-                        <label for="{{field.id_for_label}}" class="font-bold">{{field.label}}</label> 
-                        <span class="border border-black w-fit">{{field}}</span>
+                    <div class="">
+                        <label 
+                            for="{{field.id_for_label}}" 
+                            class="font-bold"
+                            >
+                            {{field.label}}
+                        </label> 
+                        <div >
+                            {{field}}
+                        </div>
                     </div>
                 {% endfor %}
-                <button type="submit" class="mb-5 bg-rose-600 px-3 py-2 text-white mt-2 rounded-md">Submit </button>
+                <button 
+                    type="submit" 
+                    class="w-full mb-5 bg-rose-600 hover:bg-rose-950 p-4 text-white font-bold text-lg mt-2 rounded-md">
+                    Submit 
+                </button>
             </form>
         </div>
     </div>
