--- a/users/templates/registration/reset_password.html
+++ b/users/templates/registration/reset_password.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Reset Password{% endblock title %}
 {% block content %}
+<div class="w-1/3 mx-auto border-2 border-gray-400 shadow-md rounded-md p-4">
     <div>
         {% comment %} for non-field errors {% endcomment %}
         {% comment %} {% if form.non_field_errors %}
@@ -19,9 +20,22 @@
     <div>
         <form action="" method="POST">
             {% csrf_token %}
-            {{form.as_p}}
-            <button type="submit">Submit</button>
+            {% for field in form %}
+                <label for="{{field.id_for_label}}" class="font-semibold">
+                    {{field.label}}
+                </label>
+                <div>
+                    {{field}}
+                </div>
+            {% endfor %}
+            {% comment %} {{form.as_p}} {% endcomment %}
+            <button 
+                type="submit"
+                class="w-full p-4 my-2 border-2 rounded-md bg-green-300 font-bold text-lg">
+                Submit
+            </button>
         </form>
         
     </div>
+</div>
 {% endblock content %}
