Event Model modified & organizer dashboard & event list page

--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -6,7 +6,7 @@
         <h2 class="text-8xl">THE EVENT </h2>
         <p class="text-3xl">Seamless Events, Unforgettable Moments</p>
     </div>
-    <div>
+    <pre>
         🎯 Primary Goal
 
         Explain what this platform is
@@ -16,6 +16,15 @@
         Show value quickly
 
         Encourage users to explore or sign up
-    </div>
+    </pre>
+    <pre>
+        1.  Hero Section (Always)
+        2.  Platform Features / Services
+        3.  Highlighted Events Section 
+        4.  Call to Action (End of page)
+            - “Browse all events”
+            - “Join as organizer”
+            - “Sign up”
+    </pre>
     
 {% endblock content %}
