--- a/users/templates/dashboard/organizer_dashboard.html
+++ b/users/templates/dashboard/organizer_dashboard.html
@@ -1,5 +1,75 @@
 {% extends "base.html" %}
 {% block title %}Organizer Dashboard{% endblock title %}
 {% block content %}
+<h1 class="text-center text-3xl font-bold my-4">Organizer Dashboard</h1>
 
+<div class="w-11/12 mx-auto flex justify-between my-4">
+    <h1 class="text-2xl font-semibold">
+        Hello {{user.first_name}} {{user.last_name}}, Manage your Events: 
+    </h1>
+    <a href="{% url 'create-event' %}"
+        class="px-2 py-1 font-bold bg-cyan-300 border-2 rounded-md">
+        Create Event
+    </a>
+</div>
+{% comment %} Stats grid section {% endcomment %}
+{% include "stats_grid.html" %}
+<div>
+    {% if messages %}
+        {% for message in messages %}
+        <p>{{message}}</p>
+        {% endfor %}
+    {% endif %}
+</div>
+{% comment %} Event display section {% endcomment %}
+    <div class="all_task bg-white w-11/12 mx-auto border-2  rounded-lg p-4 mt-3">
+        <h3 class="font-bold text-2xl text-center my-4">{{title}}</h3>   
+        <div class="all_task_body grid grid-cols-4 gap-1 text-sm font-bold">
+            <!-- <div class="task_body_heading"></div> -->
+             <p>Event Name</p>
+             <p>Category</p>
+             <p>Participants</p>
+             <p>Do More</p>
+        </div>
+        
+        {% for event in events %}
+        <div class="grid grid-cols-4  text-sm mt-2 border my-6 p-2">
+
+            <div class="flex items-center gap-1">
+               <div class="list_style w-1 h-1 bg-green-600 rounded-full "></div>
+               <p class="font-semibold">{{event.name}}</p>
+               
+            </div>
+            <div class="flex items-center">
+               <div class=" bg-blue-200 w-fit p-1 rounded-md ">
+                   <p>{{event.category}}</p>
+
+               </div>
+            </div>
+            <div class="flex gap-1 text-center -space-x-3 text-white">
+               
+                <div class="list_style w-6 h-6 bg-green-600 rounded-full border border-white self-center flex items-center justify-center ">
+                     <p >{{event.participants.all.count}}</p>
+                 </div>
+                
+                
+             </div>
+            <div class="flex items-center gap-3">
+
+                <p class="font-bold">{{event.date}}</p>
+                <button class="border-2 px-4 py-2 bg-slate-500 rounded-md">
+                    <a href="{% url 'details' event.id %}">Details</a>
+                </button>
+                <button class="border-2 px-4 py-2 bg-cyan-400 rounded-md">
+                    <a href="{% url 'update-event' event.id %}">Update</a>
+                </button>
+
+                <form action="{% url 'delete-event' event.id %}" method="POST">
+                    {% csrf_token %}
+                    <button type="submit" class="border-2 px-4 py-2 bg-red-400 rounded-md">Delete</button>
+                </form>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
 {% endblock content %}
