prototype structure complete

--- a/events/templates/create_event.html
+++ b/events/templates/create_event.html
@@ -3,7 +3,7 @@
 {% block content %}
 <section class="p-4 w-1/2 mx-auto bg-violet-50">
 
-    <h1 class="text-center text-3xl font-bold">Create a New Event</h1>
+    <h1 class="text-center text-3xl font-bold">{{title}}</h1>
     {% if messages %}
         {% for message in messages %}
         <p class="text-red text-center font-bold p-1 border-red-700 bg-blue-400 rounded-md">
