--- a/events/templates/event_details.html
+++ b/events/templates/event_details.html
@@ -42,7 +42,7 @@
             {% csrf_token %}
                 <button type="submit"
                     class="p-4 border-2 rounded-md my-2  bg-sky-500 font-bold">
-                    {% if is_registered %}UnRegister {% else %}Register Now{% endif %}
+                    {% if is_registered %}Cancel Registration {% else %}Register Now{% endif %}
                 </button>
             </form>
         </div>
